# rust-and-bust

./: Cargo.toml  README.md  RUN.md  main.rs  training_helper.py  values.csv
.github/workflows/: check.yml
jeshture/: Cargo.toml
jeshture/src/: main.rs
